templates/public/css/main.css
body{
    margin: 0px;
    font-family: 'Roboto', 'Montserrat', sans-serif;
    color: 	#ffffff;
    background-color: #26262b;
    align-content: center;
    overflow: hidden;
}

h1{
    font-family: 'Montserrat', sans-serif;
}

h2{
    font-family: 'Montserrat', sans-serif;
}

p{
    font-family: 'Open Sans', sans-serif;
}

a:link{
    color: #358cdd;
}

a:visited {
    color: #358cdd;
}

.head-text{
    margin: 0;
    padding: 20px;
    padding-left: 8px;
}
.header{
    background-color: rgba(0,0,0,.1);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.search-div{
    padding: 8px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.search-input{
    border: none;
    font-size: 18px;
    height: 30px;
    padding: 6px;
}

.search-button{
    padding: 6px 10px;
    margin-right: 16px;
    background: #ddd;
    font-size: 17px;
    border: none;
    cursor: pointer;
    height: 42px;
    width: 44px;
}

/* Add a black background color to the top navigation */
.topnav {
  background-color: #333;
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

/* Change the color of links on hover */
.topnav a:hover {
  background-color: #ddd;
  color: black;
}

/* Add a color to the active/current link */
.topnav a.active {
  background-color: #3f51b5;
  color: white;
}

*, *:before, *:after {
 box-sizing: inherit;
}

